--- a/main.html
+++ b/main.html
@@ -1,14 +1,14 @@
-<html>
+<html lang="es">
   <head>
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="" />
     <link
       rel="stylesheet"
       as="style"
       onload="this.rel='stylesheet'"
-      href="https://fonts.googleapis.com/css2?display=swap&amp;family=Noto+Sans%3Awght%40400%3B500%3B700%3B900&amp;family=Work+Sans%3Awght%40400%3B500%3B700%3B900"
+      href="https://fonts.googleapis.com/css2?display=swap&family=Noto+Sans%3Awght%40400%3B500%3B700%3B900&family=Work+Sans%3Awght%40400%3B500%3B700%3B900"
     />
 
-    <title>Galileo Design</title>
+    <title>Galileo Diseño</title>
     <link rel="icon" type="image/x-icon" href="data:image/x-icon;base64," />
 
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
@@ -25,7 +25,7 @@
               <path d="M224,128a8,8,0,0,1-8,8H59.31l58.35,58.34a8,8,0,0,1-11.32,11.32l-72-72a8,8,0,0,1,0-11.32l72-72a8,8,0,0,1,11.32,11.32L59.31,120H216A8,8,0,0,1,224,128Z"></path>
             </svg>
           </div>
-          <h2 class="text-[#181411] text-lg font-bold leading-tight tracking-[-0.015em] flex-1 text-center pr-12">Parking</h2>
+          <h2 class="text-[#181411] text-lg font-bold leading-tight tracking-[-0.015em] flex-1 text-center pr-12">Estacionamiento</h2>
         </div>
         <div class="@container">
           <div class="@[480px]:px-4 @[480px]:py-3">
@@ -33,19 +33,19 @@
               class="bg-cover bg-center flex flex-col justify-end overflow-hidden bg-white @[480px]:rounded-xl min-h-[218px]"
               style='background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.4) 0%, rgba(0, 0, 0, 0) 25%), url("https://cdn.usegalileo.ai/stability/89ccfd7a-22d3-4fa2-b211-0b89388ecdb8.png");'
             >
-              <div class="flex p-4"><p class="text-white tracking-light text-[28px] font-bold leading-tight">Welcome to parking</p></div>
+              <div class="flex p-4"><p class="text-white tracking-light text-[28px] font-bold leading-tight">Bienvenido al estacionamiento</p></div>
             </div>
           </div>
         </div>
-        <h2 class="text-[#181411] text-[22px] font-bold leading-tight tracking-[-0.015em] px-4 pb-3 pt-5">Popular spots</h2>
-        <div class="flex overflow-y-auto [-ms-scrollbar-style:none] [scrollbar-width:none] [&amp;::-webkit-scrollbar]:hidden">
+        <h2 class="text-[#181411] text-[22px] font-bold leading-tight tracking-[-0.015em] px-4 pb-3 pt-5">Lugares populares</h2>
+        <div class="flex overflow-y-auto [-ms-scrollbar-style:none] [scrollbar-width:none] [&::-webkit-scrollbar]:hidden">
           <div class="flex items-stretch p-4 gap-3">
             <div class="flex h-full flex-1 flex-col gap-4 rounded-lg min-w-60">
               <div
                 class="w-full bg-center bg-no-repeat aspect-video bg-cover rounded-xl flex flex-col"
                 style='background-image: url("https://cdn.usegalileo.ai/stability/a7f2ebcf-08f3-4f3d-b877-3c35bdd11b57.png");'
               ></div>
-              <p class="text-[#181411] text-base font-medium leading-normal">Union Square</p>
+              <p class="text-[#181411] text-base font-medium leading-normal">Plaza de la Unión</p>
             </div>
             <div class="flex h-full flex-1 flex-col gap-4 rounded-lg min-w-60">
               <div
@@ -59,37 +59,37 @@
                 class="w-full bg-center bg-no-repeat aspect-video bg-cover rounded-xl flex flex-col"
                 style='background-image: url("https://cdn.usegalileo.ai/stability/1baa98ad-aab3-4b1e-ab7f-c86851e1e8f4.png");'
               ></div>
-              <p class="text-[#181411] text-base font-medium leading-normal">Mission Bay</p>
+              <p class="text-[#181411] text-base font-medium leading-normal">Bahía de la Misión</p>
             </div>
           </div>
         </div>
-        <h2 class="text-[#181411] text-[22px] font-bold leading-tight tracking-[-0.015em] px-4 pb-3 pt-5">Specials</h2>
-        <div class="flex overflow-y-auto [-ms-scrollbar-style:none] [scrollbar-width:none] [&amp;::-webkit-scrollbar]:hidden">
+        <h2 class="text-[#181411] text-[22px] font-bold leading-tight tracking-[-0.015em] px-4 pb-3 pt-5">Ofertas especiales</h2>
+        <div class="flex overflow-y-auto [-ms-scrollbar-style:none] [scrollbar-width:none] [&::-webkit-scrollbar]:hidden">
           <div class="flex items-stretch p-4 gap-3">
             <div class="flex h-full flex-1 flex-col gap-4 rounded-lg min-w-40">
               <div
                 class="w-full bg-center bg-no-repeat aspect-video bg-cover rounded-xl flex flex-col"
                 style='background-image: url("https://cdn.usegalileo.ai/stability/4b4dffa8-5783-4444-b1d1-9d9e71597e61.png");'
               ></div>
-              <p class="text-[#181411] text-base font-medium leading-normal">$2/hr</p>
+              <p class="text-[#181411] text-base font-medium leading-normal">$2/hora</p>
             </div>
             <div class="flex h-full flex-1 flex-col gap-4 rounded-lg min-w-40">
               <div
                 class="w-full bg-center bg-no-repeat aspect-video bg-cover rounded-xl flex flex-col"
                 style='background-image: url("https://cdn.usegalileo.ai/sdxl10/3bf2bc1e-806f-4f9c-b93c-9c1ddbeb7fdf.png");'
               ></div>
-              <p class="text-[#181411] text-base font-medium leading-normal">$8/hr</p>
+              <p class="text-[#181411] text-base font-medium leading-normal">$8/hora</p>
             </div>
             <div class="flex h-full flex-1 flex-col gap-4 rounded-lg min-w-40">
               <div
                 class="w-full bg-center bg-no-repeat aspect-video bg-cover rounded-xl flex flex-col"
                 style='background-image: url("https://cdn.usegalileo.ai/stability/802041ed-ca4d-4702-8a7a-e7662ec3d885.png");'
               ></div>
-              <p class="text-[#181411] text-base font-medium leading-normal">Free</p>
+              <p class="text-[#181411] text-base font-medium leading-normal">Gratis</p>
             </div>
           </div>
         </div>
-        <h2 class="text-[#181411] text-[22px] font-bold leading-tight tracking-[-0.015em] px-4 pb-3 pt-5">Nearby</h2>
+        <h2 class="text-[#181411] text-[22px] font-bold leading-tight tracking-[-0.015em] px-4 pb-3 pt-5">Cercanos</h2>
         <div class="flex px-4 py-3">
           <div
             class="w-full bg-center bg-no-repeat aspect-video bg-cover rounded-xl object-cover"
@@ -107,7 +107,7 @@
                 ></path>
               </svg>
             </div>
-            <p class="text-[#181411] text-xs font-medium leading-normal tracking-[0.015em]">Home</p>
+            <p class="text-[#181411] text-xs font-medium leading-normal tracking-[0.015em]">Inicio</p>
           </a>
           <a class="just flex flex-1 flex-col items-center justify-end gap-1 text-[#8a7360]" href="/book">
             <div class="text-[#8a7360] flex h-8 items-center justify-center" data-icon="Calendar" data-size="24px" data-weight="regular">
@@ -117,27 +117,27 @@
                 ></path>
               </svg>
             </div>
-            <p class="text-[#8a7360] text-xs font-medium leading-normal tracking-[0.015em]" hre>Book</p>
+            <p class="text-[#8a7360] text-xs font-medium leading-normal tracking-[0.015em]">Reservar</p>
           </a>
           <a class="just flex flex-1 flex-col items-center justify-end gap-1 text-[#8a7360]" href="#">
             <div class="text-[#8a7360] flex h-8 items-center justify-center" data-icon="CreditCard" data-size="24px" data-weight="regular">
               <svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor" viewBox="0 0 256 256">
                 <path
                   d="M224,48H32A16,16,0,0,0,16,64V192a16,16,0,0,0,16,16H224a16,16,0,0,0,16-16V64A16,16,0,0,0,224,48Zm0,16V88H32V64Zm0,128H32V104H224v88Zm-16-24a8,8,0,0,1-8,8H168a8,8,0,0,1,0-16h32A8,8,0,0,1,208,168Zm-64,0a8,8,0,0,1-8,8H120a8,8,0,0,1,0-16h16A8,8,0,0,1,144,168Z"
-                ></path>
+                </path>
               </svg>
             </div>
-            <p class="text-[#8a7360] text-xs font-medium leading-normal tracking-[0.015em]">Passes</p>
+            <p class="text-[#8a7360] text-xs font-medium leading-normal tracking-[0.015em]">Pases</p>
           </a>
           <a class="just flex flex-1 flex-col items-center justify-end gap-1 text-[#8a7360]" href="#">
             <div class="text-[#8a7360] flex h-8 items-center justify-center" data-icon="Question" data-size="24px" data-weight="regular">
               <svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor" viewBox="0 0 256 256">
                 <path
                   d="M140,180a12,12,0,1,1-12-12A12,12,0,0,1,140,180ZM128,72c-22.06,0-40,16.15-40,36v4a8,8,0,0,0,16,0v-4c0-11,10.77-20,24-20s24,9,24,20-10.77,20-24,20a8,8,0,0,0-8,8v8a8,8,0,0,0,16,0v-.72c18.24-3.35,32-17.9,32-35.28C168,88.15,150.06,72,128,72Zm104,56A104,104,0,1,1,128,24,104.11,104.11,0,0,1,232,128Zm-16,0a88,88,0,1,0-88,88A88.1,88.1,0,0,0,216,128Z"
-                ></path>
+                </path>
               </svg>
             </div>
-            <p class="text-[#8a7360] text-xs font-medium leading-normal tracking-[0.015em]">Help</p>
+            <p class="text-[#8a7360] text-xs font-medium leading-normal tracking-[0.015em]">Ayuda</p>
           </a>
           <a class="just flex flex-1 flex-col items-center justify-end gap-1 text-[#8a7360]" href="#">
             <div class="text-[#8a7360] flex h-8 items-center justify-center" data-icon="UserCircle" data-size="24px" data-weight="regular">
@@ -147,7 +147,7 @@
                 ></path>
               </svg>
             </div>
-            <p class="text-[#8a7360] text-xs font-medium leading-normal tracking-[0.015em]">Account</p>
+            <p class="text-[#8a7360] text-xs font-medium leading-normal tracking-[0.015em]">Cuenta</p>
           </a>
         </div>
         <div class="h-5 bg-white"></div>
