--- a/page2.html
+++ b/page2.html
@@ -1,14 +1,14 @@
-<html>
+<html lang="es">
   <head>
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin="" />
     <link
       rel="stylesheet"
       as="style"
       onload="this.rel='stylesheet'"
-      href="https://fonts.googleapis.com/css2?display=swap&amp;family=Noto+Sans%3Awght%40400%3B500%3B700%3B900&amp;family=Work+Sans%3Awght%40400%3B500%3B700%3B900"
+      href="https://fonts.googleapis.com/css2?display=swap&family=Noto+Sans%3Awght%40400%3B500%3B700%3B900&family=Work+Sans%3Awght%40400%3B500%3B700%3B900"
     />
 
-    <title>Galileo Design</title>
+    <title>Galileo Diseño</title>
     <link rel="icon" type="image/x-icon" href="data:image/x-icon;base64," />
 
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
@@ -17,11 +17,15 @@
     <div class="relative flex size-full min-h-screen flex-col bg-white group/design-root overflow-x-hidden" style='font-family: "Work Sans", "Noto Sans", sans-serif;'>
       <div class="flex items-center bg-white p-4 pb-2 justify-between">
         <div class="text-[#181411] flex size-12 shrink-0 items-center" data-icon="ArrowLeft" data-size="24px" data-weight="regular">
-          <svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor" viewBox="0 0 256 256">
-            <path d="M224,128a8,8,0,0,1-8,8H59.31l58.35,58.34a8,8,0,0,1-11.32,11.32l-72-72a8,8,0,0,1,0-11.32l72-72a8,8,0,0,1,11.32,11.32L59.31,120H216A8,8,0,0,1,224,128Z"></path>
-          </svg>
+          <a href="/">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor" viewBox="0 0 256 256">
+              <path
+                d="M224,128a8,8,0,0,1-8,8H59.31l58.35,58.34a8,8,0,0,1-11.32,11.32l-72-72a8,8,0,0,1,0-11.32l72-72a8,8,0,0,1,11.32,11.32L59.31,120H216A8,8,0,0,1,224,128Z">
+              </path>
+            </svg>
+          </a>
         </div>
-        <h2 class="text-[#181411] text-lg font-bold leading-tight tracking-[-0.015em] flex-1 text-center pr-12">Parking</h2>
+        <h2 class="text-[#181411] text-lg font-bold leading-tight tracking-[-0.015em] flex-1 text-center pr-12">Estacionamiento</h2>
       </div>
       <div class="@container flex flex-col h-full flex-1">
         <div class="flex flex-1 flex-col @[480px]:px-4 @[480px]:py-3">
@@ -44,7 +48,7 @@
                   </svg>
                 </div>
                 <input
-                  placeholder="Where to?"
+                  placeholder="¿A dónde ir?"
                   class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden rounded-xl text-[#181411] focus:outline-0 focus:ring-0 border-none bg-white focus:border-none h-full placeholder:text-[#8a7360] px-4 rounded-l-none border-l-0 pl-2 text-base font-normal leading-normal"
                   value=""
                 />
@@ -72,30 +76,28 @@
                   <svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor" viewBox="0 0 256 256" transform="scale(-1, 1)">
                     <path
                       d="M229.33,98.21,53.41,33l-.16-.05A16,16,0,0,0,32.9,53.25a1,1,0,0,0,.05.16L98.21,229.33A15.77,15.77,0,0,0,113.28,240h.3a15.77,15.77,0,0,0,15-11.29l23.56-76.56,76.56-23.56a16,16,0,0,0,.62-30.38ZM224,113.3l-76.56,23.56a16,16,0,0,0-10.58,10.58L113.3,224h0l-.06-.17L48,48l175.82,65.22.16.06Z"
-                    ></path>
+                    </path>
                   </svg>
                 </div>
               </button>
             </div>
           </div>
         </div>
-      </div>
-      <div class="flex absolute top-0 left-0 h-full w-full flex-col justify-end items-stretch">
         <div class="flex flex-col items-stretch bg-white">
           <button class="flex h-5 w-full items-center justify-center"><div class="h-1 w-9 rounded-full bg-[#e6e0db]"></div></button>
           <div class="flex-1">
-            <h4 class="text-[#8a7360] text-sm font-bold leading-normal tracking-[0.015em] px-4 py-2 text-center">200 results</h4>
+            <h4 class="text-[#8a7360] text-sm font-bold leading-normal tracking-[0.015em] px-4 py-2 text-center">200 resultados</h4>
             <div class="p-4">
               <div class="flex items-stretch justify-between gap-4 rounded-xl">
                 <div class="flex flex-[2_2_0px] flex-col gap-4">
                   <div class="flex flex-col gap-1">
-                    <p class="text-[#181411] text-base font-bold leading-tight">Mission Bay Garage</p>
-                    <p class="text-[#8a7360] text-sm font-normal leading-normal">2 min walk</p>
+                    <p class="text-[#181411] text-base font-bold leading-tight">Estacionamiento de la Bahía de la Misión</p>
+                    <p class="text-[#8a7360] text-sm font-normal leading-normal">2 minutos caminando</p>
                   </div>
                   <form>
                     <button formaction="/reserve"
                             class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-xl h-8 px-4 flex-row-reverse bg-[#f5f2f0] text-[#181411] text-sm font-medium leading-normal w-fit">
-                      <span class="truncate">Reserve</span>
+                      <span class="truncate">Reservar</span>
                     </button>
                   </form>
                 </div>
@@ -109,13 +111,13 @@
               <div class="flex items-stretch justify-between gap-4 rounded-xl">
                 <div class="flex flex-[2_2_0px] flex-col gap-4">
                   <div class="flex flex-col gap-1">
-                    <p class="text-[#181411] text-base font-bold leading-tight">5th &amp; Mission Parking Garage</p>
-                    <p class="text-[#8a7360] text-sm font-normal leading-normal">3 min walk</p>
+                    <p class="text-[#181411] text-base font-bold leading-tight">Estacionamiento 5ta & Misión </p>
+                    <p class="text-[#8a7360] text-sm font-normal leading-normal">3 minutos caminando</p>
                   </div>
                   <form>
                     <button formaction="/reserve"
                             class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-xl h-8 px-4 flex-row-reverse bg-[#f5f2f0] text-[#181411] text-sm font-medium leading-normal w-fit">
-                      <span class="truncate">Reserve</span>
+                      <span class="truncate">Reservar</span>
                     </button>
                   </form>
                 </div>
